# context-pilot

./: .env.example  .gitignore  AGENTS.md  README.md  contextpilot_codex_handoff.md  pyproject.toml
docs/: architecture.md  protocols.md  roadmap.md  security.md
examples/: aider.env.example  claude-code.env.example  contextpilot.skill.md  continue.config.yaml  copilot-cli.env.example  copilot-instructions.md
src/contextpilot/: config.py  main.py
src/contextpilot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/contextpilot/api/: anthropic.py  auth.py  errors.py  health.py  models.py  openai.py  schemas.py
src/contextpilot/cli/: app.py
src/contextpilot/context/: freshness.py  planner.py  repo_indexer.py
src/contextpilot/gateway/: errors.py  normalizer.py
src/contextpilot/mcp/: tools.py
src/contextpilot/providers/: base.py  echo.py
src/contextpilot/router/: classifier.py  model_router.py  schemas.py
src/contextpilot/storage/: db.py  migrations.py  models.py  repositories.py
tests/: conftest.py  test_api_hardening.py  test_auth_and_errors.py  test_context_planner.py  test_freshness.py  test_health.py  test_openai_chat_completion.py  test_protocol_wrappers.py  test_repo_indexer.py  test_router_classifier.py  test_storage_trace.py
