[build-system]
requires=["setuptools>=68","wheel"]
build-backend="setuptools.build_meta"

[project]
name="contextpilot"
version="0.0.1"
dependencies=["fastapi","uvicorn","pydantic>=2","httpx","sqlalchemy","typer","pytest"]

[project.scripts]
contextpilot="contextpilot.cli.app:app"

[tool.setuptools.packages.find]
where=["src"]
